# libsock

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  a.out  libsock.pc.in  main.cpp
include/libsock/: client.hpp  clientManager.hpp  types.hpp
include/libsock/client/: client.hpp  clients.hpp  server.hpp
include/libsock/interfaces/: IServer.hpp
include/libsock/misc/: then.hpp
include/libsock/server/: client.hpp  clients.hpp  server.hpp
modules/: client.cppm  clientManager.cppm  fileDescriptor.cppm  interfaces.cppm  misc.cppm  server.cppm  types.cppm
src/: client.cpp  clientManager.cpp
src/client/: client.cpp  clients.cpp  server.cpp
src/interfaces/: IServer.cpp
src/misc/: FileDescriptor.cpp  FileDescriptor.hpp  macros.hpp  memory.hpp
src/server/: client.cpp  clients.cpp  server.cpp
